--- a/src/Components/1-header/header.css
+++ b/src/Components/1-header/header.css
@@ -1,4 +1,3 @@
-
 /* 
 =============================
 Table of contents
@@ -17,39 +16,47 @@ Table of contents
 =============================
 */
 
-header.flex{
+header.flex {
     justify-content: space-between;
-    padding: 0 2.4rem ;
+    padding: 0 2.4rem;
     margin-top: 1.2rem;
 }
- header icon-close{
-    font-size: 1.5rem; }
- header.flex nav{
-    background-color:var(--bgHeader);
+
+header icon-close {
+    font-size: 1.5rem;
+}
+
+header.flex nav {
+    background-color: var(--bgHeader);
     padding: 0.77rem 1.6rem;
     border-radius: 55px;
     box-shadow: 1px 1px 3px rgb(46, 44, 44);
- }
+}
+
 header ul.flex {
     gap: 16px;
 }
+
 header ul li a {
     color: var(--title);
     opacity: 0.9;
     font-size: 0.88rem;
     font-weight: 500;
 }
+
 header ul li a:hover {
     color: var(--blue);
     opacity: 1;
     font-size: 0.9rem;
     font-weight: 500;
-   
+
 }
-header button{
+
+header button {
     height: 100px;
 }
-header button.menu{
+
+header button.menu {
     display: none;
 }
 
@@ -60,35 +67,43 @@ header button.menu{
     2-Button & Icons
 =============================
 */
-header .mode, header .icon-menu{
+header button.mode,
+header .icon-menu {
     background-color: var(--bgHeader);
     height: 2.4rem;
     width: 2.4rem;
     justify-content: center;
     text-align: center;
-   color: var(--subtitle);
-   border: 1px solid rgba(244, 165, 96, 0.247);
-   border-radius: 50%;
-   transition: 0.2s;
+    color: var(--subtitle);
+    border: 1px solid rgba(244, 165, 96, 0.247);
+    border-radius: 50%;
+    transition: 0.2s;
+    box-shadow: 1px 1px 40px rgba(35, 35, 36, 0.165);
 }
-header .mode:hover , header .icon-menu:hover{
+header .icon-sun{
+    color: orange;
+}
+header .mode:hover,
+header .icon-menu:hover {
 
     color: var(--title);
     border: 1px solid rgb(244, 165, 96);
 }
-header .icon-close{
+
+header .icon-close {
     font-size: 1.5rem;
     color: var(--subtitle);
     transition: 0.3s;
-    
+
 }
-header .icon-close:hover{
+
+header .icon-close:hover {
     font-size: 1.7rem;
     color: crimson;
     rotate: 180deg;
 }
 
-header .fixed{
+header .fixed {
     position: fixed;
     inset: 0;
     background-color: rgba(40, 40, 48, 0.90);
@@ -104,12 +119,21 @@ header .fixed{
 =============================
 */
 
-@keyframes mymove{
-    0%{scale:0;}
-     60%{scale:1.2;}
-    100%{scale:1;}
+@keyframes mymove {
+    0% {
+        scale: 0;
+    }
+
+    60% {
+        scale: 1.2;
+    }
+
+    100% {
+        scale: 1;
+    }
 }
-header .fixed ul.modal{
+
+header .fixed ul.modal {
     animation: mymove 0.7s 1;
     width: 75%;
     margin-left: auto;
@@ -119,34 +143,39 @@ header .fixed ul.modal{
     padding: 1rem 2rem;
     background-color: var(--secondary);
 }
-header .fixed ul.modal li{
+
+header .fixed ul.modal li {
     border-bottom: 1px solid var(--border);
     padding-bottom: 0.77rem;
     padding-top: 0.5rem;
 }
-header .fixed ul.modal li:last-child{
-    border:none;
+
+header .fixed ul.modal li:last-child {
+    border: none;
 }
-header .fixed ul.modal li:first-child{
+
+header .fixed ul.modal li:first-child {
     text-align: right;
     padding-bottom: 0;
     padding-top: 0.2rem;
     margin-bottom: -1rem;
-   }
-header .fixed ul.modal li a{
-     font-size: 1rem;
-    }
-  
+}
+
+header .fixed ul.modal li a {
+    font-size: 1rem;
+}
+
 /*  
 =========================================
     4-Responsive Design (media query)
 ========================================
 */
-@media(max-width:700px){
-header.flex nav{
+@media(max-width:700px) {
+    header.flex nav {
         display: none;
     }
-header button.menu{
-     display: block;
+
+    header button.menu {
+        display: block;
     }
 }
