--- a/src/Components/3-main/main.css
+++ b/src/Components/3-main/main.css
@@ -19,6 +19,7 @@ main.flex {
  */
 
 main section.left-section.flex {
+
   flex-direction: column;
   gap: 10px;
 }
@@ -45,6 +46,9 @@ main section.left-section.flex button.active {
   padding: 0.8rem 0;
   border: 1px solid var(--blue);
 }
+.light main section.left-section.flex button.active {
+  border: 1px solid rgb(0, 0, 0);
+}
 
 /* 
  =============================
@@ -53,7 +57,7 @@ main section.left-section.flex button.active {
  */
 
 main section.right-section.flex {
-  /* flex-grow: 1; */
+  flex-grow: 1;
   /* border: 1px solid red; */
   justify-content: center;
   flex-wrap: wrap;
@@ -61,6 +65,7 @@ main section.right-section.flex {
   row-gap: 2rem;
 }
 .card{
+  box-shadow: -1px 1px 1px rgba(0, 0,  0, 0.16), 1px 1px 1px rgba(0, 0,  0, 0.15);
     border: 1px solid rgba(93, 188, 25, 0.03);
     transform: 0.3s;
     border-radius: 5px;
@@ -68,10 +73,14 @@ main section.right-section.flex {
 }
 .card:hover{
     border: 1px solid var(--blue);
+    background-color: rgb(248, 248, 248);
     rotate: 1deg;
     scale: 1.01;
     cursor: pointer;
     
+}
+.light .card, .light .card:hover{
+  border: none;
 }
 .card img{
     
@@ -82,6 +91,7 @@ main section.right-section.flex {
 }
 .card .box .title {
   color: var(--title);
+  text-transform: capitalize;
 }
 
 .card .box .sub-title {
