--- a/src/index.css
+++ b/src/index.css
@@ -27,15 +27,23 @@ html {
     --secondary: rgb(24, 24, 27);
     --border: rgba(63, 63, 70, 0.4);
     --title: rgb(244, 244, 245);
-    --subtitle: rgb(161 161 170);
-    --bgHeader: rgb(39 39 42);
-    --blue: rgb(93 188 252);
+    --subtitle: rgb(161, 161 ,170);
+    --bgHeader: rgb(39, 39 ,42);
+    --blue: rgb(93, 188, 252);
     --icon-hover: #d4d4d8;
     --container-padding: 4.8rem;
 }
 
 .light {
-    --primary: #fff;
+    --primary: rgb(250, 250, 250);  
+    --secondary: rgb(255, 255, 255);
+    --border: rgba(202, 202, 202, 0.518);
+    --title: rgb(39, 39, 42);
+    --subtitle: rgb(82, 82, 91);
+    --bgHeader: rgb(253, 253, 253);
+    --blue: rgb(0, 149, 246);
+    --icon-hover: #333;
+    --container-padding: 4.8rem;
 }
 
 body {
@@ -143,7 +151,9 @@ button:active {
     right: 3%;
     text-align: center;
     border: 1px solid rgba(255, 255, 255, 0.2);
-
+    font-size: 1.25rem;
+    color: #d4d4d8;
+   
 }
 
 .scroll2Top:hover {
@@ -160,5 +170,6 @@ button:active {
         opacity: 0.6;
         height: 2.2rem;
         width: 2.2rem;
+        font-size: 1rem;
     }
 }
