--- a/src/Components/4-contact/contact.css
+++ b/src/Components/4-contact/contact.css
@@ -32,8 +32,11 @@ section.contact-us .icon-envelope {
     transition: 0.3s;
     font-size: 1.1rem;
   }
-  
-  .light section.contact-us #email,
+  section.contact-us label {
+    all: unset;
+    margin-left: 1rem;
+  }
+  .light section.contact-us #email, 
   .light section.contact-us #message {
     background-color: rgba(255, 255, 255, 0.162);
     border: 1px solid rgba(128, 128, 128, 0.451);
@@ -85,6 +88,7 @@ section.contact-us .icon-envelope {
   section.contact-us form .culum{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     
   }
   
